fix: profile update시 subcategory 데이터를 포함하여 수정할 수 있도록 변경